--- a/index.html
+++ b/index.html
@@ -10,22 +10,20 @@
     <nav>
       <div id="home">
         <div class="profile_name">
-          Jane Doe
+          Gabe Kelly
           <div class="contact_info">
             <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          jdoe@jeemail.com
+          g_kell87@yahoo.com
         </div>
         <div style="clear:both;"></div>
-        <div class="contact_info">
-          <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
-          +13456764598
-
+        
         </div>
         </div>
         <div class="topdiv">
           <a class="topmenu" href="#about-me">About Me</a>
-          <!-- Add the links for Skills, Projects and Recommendation here -->
-
+          <a class="topmenu" href="#skills">Skills</a>
+          <a class="topmenu" href="#projects">Projects</a>
+          <a class="topmenu" href="#recommendations">Recommendations</a>
         </div>
       </div>    
     </nav>
@@ -33,17 +31,17 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif" class="profile_image"/>
+        <img src="html_finalprojimages/download.png" class="profile_image"/>
       </div>
 
       <div>
           <h1>
-            Hi, I'm Jane Doe! <img src="html_finalprojimages/waving-hand.png" width="60px"/>
+            Hi, I'm Gabe! <img src="html_finalprojimages/waving-hand.png" width="60px"/>
           </h1>
           <p>
-            I am a full stack developer with 2 years of experience in both application and presentation layers.
-            I have worked on applications and microservices deployed on IBM Cloud. 
-            I am an avid user of IBM Watson Services and have worked on Watson Assistant, NLU, Sentiment analyzer to name a few.
+            Im a software integrator and data scientist. 
+            I have 5 years of experience in the field primarily using python code to
+            script workflows, do data manipulation and analytics, and to create visuals
           </p>
       </div>
     </section>
@@ -57,16 +55,38 @@
         <div class="skill">
           <img src="html_finalprojimages/html5.png"/>
           <h6>HTML</h6>
-          <p>2 years experience</p>
+          <p>Less than 1 year experience</p>
         </div>  
 
         <div class="skill">
           <img src="html_finalprojimages/js.jpeg"/>
           <h6>JavaScript</h6>
-          <p>3 years experience</p>
+          <p>Less than 1 year experience</p>
         </div>  
 
-        <!-- Add more skills here -->
+        <div class="skill">
+            <img src="html_finalprojimages/java.png"/>
+            <h6>java</h6>
+            <p>Less than 1 year experience</p>
+          </div>
+        
+          <div class="skill">
+            <img src="html_finalprojimages/react.png"/>
+            <h6>react</h6>
+            <p>Less than 1 year experience</p>
+          </div>  
+
+          <div class="skill">
+            <img src="html_finalprojimages/node.png"/>
+            <h6>node.js</h6>
+            <p>Less than 1 year experience</p>
+          </div>  
+
+          <div class="skill">
+            <img src="html_finalprojimages/CSS3.png"/>
+            <h6>CSS</h6>
+            <p>Less than 1 year experience</p>
+          </div>  
 
 
       </div>
@@ -81,24 +101,19 @@
 
         <div id="projects-container" class="projects-container">
           <div class="project-card">
-            <h3>Chatbot</h3>
+            <h3>Data Remap Widget</h3>
             <ul>
-              <li>Developed a secure website integrated with chatbot for an automobile client using HTML, CSS, JavaScript and IBM Watson Assistant</li>
+              <li>Allows users to drop in a non-complient data table (excel or csv) and map the features to a compliant name/type</li>
             </ul>
           </div>
           <hr>
           <div class="project-card">
-            <h3>Sentiment Analyzer</h3>
+            <h3>Web Based DICOM Viewer</h3>
             <ul>
-              <li>Developed and deployed a sentiment analyzer for the box reviews section of an eCommerce platform using IBM NLU</li>
+              <li>Allows user to drop in a DICOM folder were the web app will parse and generate a 3d view of the file</li>
             </ul>
           </div>
           <hr>
-          <div class="project-card">
-            <h3>Fashion Website</h3>
-            <ul>
-              <li>Created a styled multi-page website for a new player in the fashion industry and integrated it with a shopping cart, using stripe for payment gateway</li>
-            </ul>
           </div>
     </div>
     </section>
@@ -111,25 +126,18 @@
       <div class="all_recommendations" id="all_recommendations">
         <div class="recommendation">
           <span>&#8220;</span>
-          Jane is a very quick learner and quickly grasps key concepts of Web development. 
-          She got a great attitude & she is an excellent team player. 
-          She has a curious mind and asks the right question. 
-          She takes initiative within a team and has potentials to lead the team.
+          10 out of 10!
           <span>&#8221;</span>
         </div>
         <div class="recommendation">
           <span>&#8220;</span>
-          Working with Jane has been an awesome experience. 
-          She is highly knowledgable and always goes the extra step to make sure everything is right. 
-          For any future projects that need her expertise I would definitely want to work with her again.
+            I worked with Gabe back in the day. Good Times
           <span>&#8221;</span>
         </div>
         <div class="recommendation">
-          <span>&#8220;</span>
-          I had worked along with Jane during the initial phase of our venture which needed Web development. 
-          She is a committed resource who has in depth knowledge about the domain. 
-          She will be an asset for any organisation! 
-          <span>&#8221;</span>
+            <span>&#8220;</span>
+            Gabe is a hard worker who gets the job done, no matter what.
+            <span>&#8221;</span>
         </div>
       </div>
     </section>
@@ -150,14 +158,16 @@
 
     <div class="iconbutton">
       <a href="#home">
-        <!--Add the code here for the logo to appear and the icon to be actionable-->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" width="63px">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
       </a>
     </div>
 
     <div class="popup" id="popup" class="flex_center">
       <img src="html_finalprojimages/checkmark--outline.svg"/>
-      <h3><!-- Add appropriate text here--></h3>
-      <button onclick="showPopup(false)">Ok</button>
+      <h3>Thanks for the Recommendation!!!</h3>
+      <button onclick="showPopup(false)">OK</button>
     </div>
   </body>
 </html>
